diff: Fix mtime of file1 in -u/-c header line.

PR:		218018
Reviewed by:	bapt
Differential Revision:	https://reviews.freebsd.org/D10140